--- a/hunter/Dockerfile
+++ b/hunter/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy all Python files
+COPY config.py .
 COPY main.py .
 
 CMD ["python", "-u", "main.py"]
+
