🧠 Analyst Container - The Quantum Brain
NEW MODULE: analyst/
- Dockerfile: Python 3.11 slim container
- requirements.txt: pandas, pandas_ta, influxdb-client
- main.py: Professional Technical Analysis

PANDAS_TA INDICATORS:
- RSI (14 periods)
- MACD (12, 26, 9)
- Bollinger Bands (20, 2σ)
- Stochastic (14, 3, 3)
- SMA (20, 50)
- EMA (12, 26)

SIGNAL ENGINE:
- Multi-indicator scoring system
- Score: -6 to +6
- STRONG_BUY/BUY/NEUTRAL/SELL/STRONG_SELL
- Writes to InfluxDB (strategy_signal)

DOCKER-COMPOSE:
- Added analyst service
- Depends on: influxdb (healthy), hunter (started)

Run: docker-compose up -d --build analyst

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - influxdb_data:/var/lib/influxdb2
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8086/health"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8086/health" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -37,7 +37,7 @@ services:
       - redis_data:/data
     command: redis-server --appendonly yes
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -88,8 +88,27 @@ services:
       redis:
         condition: service_healthy
 
+  # ═══════════════════════════════════════════════════════
+  # 🧠 BỘ NÃO PHÂN TÍCH (ANALYST - THE QUANTUM BRAIN)
+  # ═══════════════════════════════════════════════════════
+  analyst:
+    build: ./analyst
+    container_name: vn30_analyst
+    restart: always
+    environment:
+      - INFLUX_URL=http://influxdb:8086
+      - INFLUX_TOKEN=my-super-secret-auth-token
+      - INFLUX_ORG=vnquant
+      - INFLUX_BUCKET=market_data
+    depends_on:
+      influxdb:
+        condition: service_healthy
+      hunter:
+        condition: service_started
+
 volumes:
   influxdb_data:
   grafana_data:
   redis_data:
+
 
