--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,40 @@
 version: '3.8'
 
+# ═══════════════════════════════════════════════════════
+# VN30-QUANTUM IRON DOME SECURITY
+# All services hidden behind Nginx gatekeeper
+# ═══════════════════════════════════════════════════════
+
 services:
   # ═══════════════════════════════════════════════════════
-  # KHO CHỨA DỮ LIỆU (TIME-SERIES DATABASE)
+  # 🛡️ GATEKEEPER (Public Entry Point - Port 80 only)
+  # ═══════════════════════════════════════════════════════
+  nginx:
+    image: nginx:alpine
+    container_name: vn30_gatekeeper
+    ports:
+      - "80:80" # Only public port
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - grafana
+    networks:
+      - quantum_net
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "wget", "-q", "--spider", "http://localhost/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # ═══════════════════════════════════════════════════════
+  # 🗄️ TIME-SERIES DATABASE (Hidden)
   # ═══════════════════════════════════════════════════════
   influxdb:
     image: influxdb:2.7
     container_name: vn30_influxdb
-    ports:
-      - "8086:8086"
+    expose:
+      - "8086" # Only visible to internal network
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=admin
@@ -18,6 +44,8 @@ services:
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=my-super-secret-auth-token
     volumes:
       - influxdb_data:/var/lib/influxdb2
+    networks:
+      - quantum_net
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8086/health" ]
       interval: 30s
@@ -26,16 +54,18 @@ services:
     restart: unless-stopped
 
   # ═══════════════════════════════════════════════════════
-  # CACHE LAYER (REDIS)
+  # 💾 CACHE LAYER (Hidden)
   # ═══════════════════════════════════════════════════════
   redis:
     image: redis:7-alpine
     container_name: vn30_redis
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
+    networks:
+      - quantum_net
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
       interval: 30s
@@ -44,13 +74,13 @@ services:
     restart: unless-stopped
 
   # ═══════════════════════════════════════════════════════
-  # BẢNG ĐIỀU KHIỂN (DASHBOARD)
+  # 📊 DASHBOARD (Hidden behind Nginx)
   # ═══════════════════════════════════════════════════════
   grafana:
     image: grafana/grafana:latest
     container_name: vn30_grafana
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000" # Not exposed to public
     depends_on:
       influxdb:
         condition: service_healthy
@@ -58,12 +88,15 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin123
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_ROOT_URL=%(protocol)s://%(domain)s/
     volumes:
       - grafana_data:/var/lib/grafana
+    networks:
+      - quantum_net
     restart: unless-stopped
 
   # ═══════════════════════════════════════════════════════
-  # CON BOT SĂN DỮ LIỆU VN30 (HUNTER v2.0)
+  # 🎯 HUNTER - Data Collector (Hidden)
   # ═══════════════════════════════════════════════════════
   hunter:
     build: ./hunter
@@ -74,22 +107,19 @@ services:
       - INFLUX_TOKEN=my-super-secret-auth-token
       - INFLUX_ORG=vnquant
       - INFLUX_BUCKET=market_data
-      # Multi-stock config (empty = all VN30)
       - TARGET_STOCKS=
       - REFRESH_INTERVAL=60
-      - HISTORY_DAYS=30
-      - BATCH_SIZE=5
-      - RATE_LIMIT_DELAY=0.5
-      # Redis cache
       - REDIS_URL=redis://redis:6379
     depends_on:
       influxdb:
         condition: service_healthy
       redis:
         condition: service_healthy
+    networks:
+      - quantum_net
 
   # ═══════════════════════════════════════════════════════
-  # 🧠 BỘ NÃO PHÂN TÍCH (ANALYST - THE QUANTUM BRAIN)
+  # 🔮 ORACLE - AI Analyst (Hidden)
   # ═══════════════════════════════════════════════════════
   analyst:
     build: ./analyst
@@ -100,15 +130,32 @@ services:
       - INFLUX_TOKEN=my-super-secret-auth-token
       - INFLUX_ORG=vnquant
       - INFLUX_BUCKET=market_data
+      # Telegram (configure these)
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN:-}
+      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID:-}
     depends_on:
       influxdb:
         condition: service_healthy
       hunter:
         condition: service_started
+    networks:
+      - quantum_net
 
+# ═══════════════════════════════════════════════════════
+# 💾 PERSISTENT VOLUMES
+# ═══════════════════════════════════════════════════════
 volumes:
   influxdb_data:
   grafana_data:
   redis_data:
 
-
+    # ═══════════════════════════════════════════════════════
+    # 🔒 PRIVATE NETWORK (Iron Dome)
+    # ═══════════════════════════════════════════════════════
+networks:
+  quantum_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.28.0.0/16
