--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,123 +1,80 @@
 # VN30-Quantum Nginx Configuration
+# Iron Dome Security Protocol
 
 events {
     worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    # Logging
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
-
-    # Performance
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-
-    # Gzip
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml application/json application/javascript application/xml;
-
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-    limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
+    
+    # Gzip compression
+    gzip on;
+    gzip_types text/plain application/json application/javascript text/css;
+    
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-    # Upstream
-    upstream backend {
-        server backend:8000;
-        keepalive 32;
+    # Upstream definitions
+    upstream grafana {
+        server grafana:3000;
     }
 
-    upstream frontend {
-        server frontend:3000;
-        keepalive 32;
-    }
-
-    # HTTP -> HTTPS redirect
     server {
         listen 80;
         server_name _;
-        return 301 https://$host$request_uri;
-    }
-
-    # Main HTTPS server
-    server {
-        listen 443 ssl http2;
-        server_name vn30quantum.com www.vn30quantum.com;
-
-        # SSL Configuration
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:SSL:50m;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-        ssl_prefer_server_ciphers off;
-
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-        # Frontend
-        location / {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+        
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 'OK';
+            add_header Content-Type text/plain;
         }
-
-        # API
-        location /api {
+        
+        # Grafana Dashboard (Main entry)
+        location / {
             limit_req zone=api_limit burst=20 nodelay;
             
-            proxy_pass http://backend;
+            proxy_pass http://grafana;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # CORS
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
-            add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-        }
-
-        # WebSocket
-        location /api/v1/ws {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
+            # WebSocket support for Grafana Live
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+        
+        # Grafana API
+        location /api/ {
+            limit_req zone=api_limit burst=50 nodelay;
+            
+            proxy_pass http://grafana;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_read_timeout 86400;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-
-        # Health check
-        location /health {
-            proxy_pass http://backend/health;
-        }
-
-        # Static files cache
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff2)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
+        
+        # Block access to sensitive paths
+        location ~ ^/(admin|config|internal) {
+            deny all;
+            return 404;
         }
     }
 }
