🚇 Zero Trust: Cloudflare Tunnel Integration
SECURITY LEVEL: INSTITUTIONAL GRADE

NEW FEATURES:
- Cloudflare Tunnel container (cloudflared)
- Zero ports exposed to Internet
- Auto HTTPS via Cloudflare
- DDoS protection included
- IP address hidden from attackers

BEFORE:
- Port 80 exposed (Iron Dome)
- Direct access to VPS IP

AFTER:
- ALL ports closed
- Access only via https://yourdomain.com
- Traffic routed through Cloudflare CDN

FILES:
- docker-compose.yml: Added tunnel service
- docs/CLOUDFLARE_TUNNEL.md: Setup guide
- .env.example: Environment variables template

SETUP:
1. Get TUNNEL_TOKEN from Cloudflare Zero Trust
2. Add to .env file
3. docker compose up -d

--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,28 @@
 # VN30-Quantum Environment Variables
-# Copy this file to .env and fill in the values
+# Copy this file to .env and fill in your values
 
 # ═══════════════════════════════════════════════════════
-# APP SETTINGS
+# CLOUDFLARE TUNNEL (Required for Zero Trust)
 # ═══════════════════════════════════════════════════════
-NODE_ENV=production
-DEBUG=false
+# Get this from Cloudflare Zero Trust → Tunnels → Create
+TUNNEL_TOKEN=your_cloudflare_tunnel_token_here
+DOMAIN=dashboard.yourdomain.com
 
 # ═══════════════════════════════════════════════════════
-# SECURITY
+# DATABASE (Change these in production!)
 # ═══════════════════════════════════════════════════════
-SECRET_KEY=your-super-secret-key-change-in-production
-JWT_SECRET=your-jwt-secret-key
+INFLUX_TOKEN=my-super-secret-auth-token
+INFLUX_PASSWORD=admin12345678
 
 # ═══════════════════════════════════════════════════════
-# DATABASE - PostgreSQL
+# GRAFANA (Change in production!)
 # ═══════════════════════════════════════════════════════
-DB_USER=vn30admin
-DB_PASSWORD=your-secure-password
-DB_NAME=vn30quantum
+GRAFANA_PASSWORD=admin123
 
 # ═══════════════════════════════════════════════════════
-# REDIS
+# TELEGRAM ALERTS (Optional)
 # ═══════════════════════════════════════════════════════
-REDIS_PASSWORD=your-redis-password
-
-# ═══════════════════════════════════════════════════════
-# INFLUXDB
-# ═══════════════════════════════════════════════════════
-INFLUX_PASSWORD=your-influx-password
-INFLUX_TOKEN=your-influx-admin-token
-
-# ═══════════════════════════════════════════════════════
-# MONITORING - Grafana
-# ═══════════════════════════════════════════════════════
-GRAFANA_PASSWORD=your-grafana-password
-
-# ═══════════════════════════════════════════════════════
-# AI - Gemini
-# ═══════════════════════════════════════════════════════
-GEMINI_API_KEY=your-gemini-api-key
-
-# ═══════════════════════════════════════════════════════
-# ALERTS - Telegram
-# ═══════════════════════════════════════════════════════
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
-TELEGRAM_CHANNEL_ID=your-channel-id
-TELEGRAM_ENABLED=true
-
-# ═══════════════════════════════════════════════════════
-# ALERTS - Email (SendGrid)
-# ═══════════════════════════════════════════════════════
-SENDGRID_API_KEY=your-sendgrid-api-key
-EMAIL_FROM=alerts@vn30quantum.com
-EMAIL_ENABLED=true
+# Get token from @BotFather on Telegram
+TELEGRAM_BOT_TOKEN=
+# Get chat_id from https://api.telegram.org/bot<TOKEN>/getUpdates
+TELEGRAM_CHAT_ID=
