--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "next": "16.0.8",
+    "next-intl": "^4.5.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "stripe": "^20.0.0",
